options/options.css
.section {
    border-bottom: 1px solid;
}
.error-message {
    color: red;
}

ul.tab {
    padding: 0px;
    margin: 0px;
}
ul.tab li {
    float: left;
    list-style-type: none;
    border: 1px #ddd solid;
    border-top: none;
    border-bottom: 2px #ddd solid;
}
ul.tab li.selectTab {
    border-bottom: 2px white solid;
    font-weight: bold;
}
ul.tab li a {
    color: black;
    padding: 3px 10px 5px;
    text-decoration: none;
}
ul.tab:after {
    content: "";
    display: block;
    overflow: hidden;
    clear: both;
}

#key-mapping-textarea {
    width: 100%;
    height: 400px;
}

.hint-pattern-global-selector {
    box-sizing: border-box;
    width: 100%;
    height: 4em;
}
#hint-pattern-local {
    margin: 8px 0px;
}
#hint-pattern-list-header > span {
    display: inline-block;
}
.hint-pattern-local-selector {
    width: 40%;
}
.hint-pattern-local-description {
    width: 50%;
}
#hint-pattern-list-manipulation {
    margin-top: 4px;
}
#search-engine-list {
    margin-top: 4px;
    width: 100%;
    overflow-x: auto;
}
#search-engine-list > div {
    min-width: 900px;
}
#search-engine-list-header > span {
    display: inline-block;
    font-size: smaller;
}
.search-engine-default {
    width: 50px;
    margin: 0px;
}
.search-engine-keyword {
    width: 10%;
}
.search-engine-url {
    width: 20%;
}
.search-engine-suggest-url {
    width: 20%;
}
.search-engine-suggest-type {
    width: 60px;
}
.search-engine-suggest-path {
    width: 20%;
}
.search-engine-suggest-decode {
    width: 40px;
}

.page-pattern-regex {
    width: 90%;
    font-family: monospace;
}

body {
    margin-bottom: 42px;
}
#options-bar {
    position: fixed;
    bottom: 0px;
    left: 0px;
    background: lightgray;
    width: 100%;
}

